--- a/package.json
+++ b/package.json
@@ -55,16 +55,19 @@
     "mkdirp": "^0.5.1",
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
+    "readline": "^1.3.0",
     "rxjs": "~6.3",
     "sequelize": "^5.18.1",
     "sequelize-cli": "^5.5.1",
     "sequelize-paginate": "^1.1.6",
     "sortablejs": "^1.9.0",
     "uuid": "^3.3.2",
+    "xlsx": "^0.15.1",
     "zone.js": "~0.8"
   },
   "devDependencies": {
