--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
+    "qrcode": "^1.4.2",
     "readline": "^1.3.0",
     "rxjs": "~6.3",
+    "seedrandom": "^3.0.5",
     "sequelize": "^5.18.1",
     "sequelize-cli": "^5.5.1",
     "sequelize-paginate": "^1.1.6",
