--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/upgrade": "~7.0",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+    "@rush/webpack": "^7.3.6",
     "@types/activestorage": "^5.2.2",
     "@types/lodash": "^4.14.132",
     "activestorage": "^5.2.3",
