--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "bufferutil": "^4.0.1",
     "cleave.js": "^1.5.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.3.3",
@@ -68,7 +69,9 @@
     "sequelize-cli": "^5.5.1",
     "sequelize-paginate": "^1.1.6",
     "sortablejs": "^1.9.0",
+    "utf-8-validate": "^5.0.2",
     "uuid": "^3.3.2",
+    "ws": "^7.2.1",
     "xlsx": "^0.15.1",
     "zone.js": "~0.8"
   },
