--- a/example.env
+++ b/example.env
@@ -7,5 +7,6 @@ AWS_S3_BUCKET=
 AWS_S3_BUCKET_REGION=
 BASE_HOST=localhost
 BASE_URL=http://localhost:3000
+GOOGLE_MAPS_API_KEY=
 SESSION_SECRET=randomstring
 SMTP_FROM_EMAIL_ADDRESS=
