--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "nodemon -L -V --ignore ./client ./bin/www"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~7.0",
     "@angular/common": "~7.0",
     "@angular/compiler": "~7.0",
