[#17] Store uploaded files in a named volume in deploy config

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -25,3 +25,7 @@ services:
       - ${HOST_PORT:-3000}:3000
     depends_on:
       - db
+    volumes:
+      - uploads:/opt/node/app/public/uploads
+volumes:
+  uploads:
