[#18] Pass GOOGLE_MAPS_API_KEY into prod docker-compose config

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -17,6 +17,7 @@ services:
       - BASE_HOST=${BASE_HOST}
       - BASE_URL=${BASE_URL}
       - DATABASE_URL=postgres://postgres@db/app
+      - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
       - NODE_ENV=production
       - PORT=3000
       - SESSION_SECRET=${SESSION_SECRET}
