--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "@types/activestorage": "^5.2.2",
     "@types/lodash": "^4.14.132",
+    "@types/numeral": "0.0.26",
     "activestorage": "^5.2.3",
+    "agm-overlays": "^2.0.0",
     "angular-sortablejs": "^2.7.0",
     "aws-sdk": "^2.463.0",
     "bcrypt": "^3.0.6",
@@ -55,10 +57,12 @@
     "lodash": "^4.17.15",
     "mime-types": "^2.1.24",
     "mkdirp": "^0.5.1",
+    "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.0",
+    "numeral": "^2.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
