[#17] Switch to storing uploads in local filesystem

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -27,6 +27,4 @@ services:
     depends_on:
       - db
     volumes:
-      - uploads:/opt/node/app/public/uploads
-volumes:
-  uploads:
+      - ./public/uploads:/opt/node/app/public/uploads
