--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:11
   server:
     build: .
-    image: francisli/t2p-server
+    image: natriage/nat-server
     command: bash -l -c "npm start"
     environment:
       - APP_NAME=${APP_NAME}
