--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,4 +1,4 @@
-version: '2.3'
+version: '3'
 services:
   db:
     image: postgis/postgis:11-3.0-alpine
@@ -6,22 +6,8 @@ services:
     build: .
     image: natriage/nat-server
     command: bash -l -c "npm start"
-    environment:
-      - APP_NAME=${APP_NAME}
-      - ASSET_HOST=${ASSET_HOST}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_S3_BASE_URL=${AWS_S3_BASE_URL}
-      - AWS_S3_BUCKET=${AWS_S3_BUCKET}
-      - AWS_S3_BUCKET_REGION=${AWS_S3_BUCKET_REGION}
-      - BASE_HOST=${BASE_HOST}
-      - BASE_URL=${BASE_URL}
-      - DATABASE_URL=postgres://postgres@db/app
-      - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
-      - NODE_ENV=production
-      - PORT=3000
-      - SESSION_SECRET=${SESSION_SECRET}
-      - SMTP_FROM_EMAIL_ADDRESS=${SMTP_FROM_EMAIL_ADDRESS}
+    env_file:
+      - .env
     ports:
       - ${HOST_PORT:-3000}:3000
     depends_on:
