--- a/example.env
+++ b/example.env
@@ -10,5 +10,11 @@ BASE_URL=http://localhost:3000
 COMPOSE_PROJECT_NAME=nat
 EXPRESS_LOG_LEVEL=dev
 GOOGLE_MAPS_API_KEY=
+MARKETING_EMAIL=
+MARKETING_ENABLED=false
 SESSION_SECRET=randomstring
 SMTP_FROM_EMAIL_ADDRESS=
+SMTP_HOST=mailcatcher
+SMTP_PORT=1025
+SMTP_USERNAME=none
+SMTP_PASSWORD=none
