--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.3.3",
     "core-js": "~2.5",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
