--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "sequelize-fixtures": "^1.1.1",
     "sequelize-paginate": "^1.1.6",
     "shelljs": "^0.8.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "sortablejs": "^1.9.0",
     "supertest": "^4.0.2",
     "supertest-session": "^4.0.0",
