--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "sass-loader": "~7.1",
     "style-loader": "~0.23",
     "to-string-loader": "~1.1",
-    "typescript": "~3.1",
+    "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "~2.0",
     "webpack": "~4.29",
     "webpack-bundle-tracker": "^0.4.2-beta",
