[#37] Add optional Google Analytics tracking on marketing landing page

--- a/example.env
+++ b/example.env
@@ -9,6 +9,7 @@ BASE_HOST=lvh.me
 BASE_URL=http://lvh.me:3000
 COMPOSE_PROJECT_NAME=nat
 EXPRESS_LOG_LEVEL=dev
+GOOGLE_ANALYTICS_MEASUREMENT_ID=
 GOOGLE_MAPS_API_KEY=
 MARKETING_EMAIL=
 MARKETING_ENABLED=false
