--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   db:
     image: postgis/postgis:11-3.0-alpine
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
   server:
     build: .
     image: peakresponse/peak-server
