--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "webpack-dev-server",
     "build:prod": "npm run build:clean && npm run webpack-prod && npm run build:clean",
     "build:clean": "del-cli 'client/**/*.js' '!client/**/*.font.js' 'client/**/*.js.map' 'client/**/*.ngsummary.json' 'client/**/*.metadata.json' 'client/**/**/*.ngfactory.ts' 'client/**/*.ngstyle.ts' 'client/**/*.shim.ts'",
-    "start": "nodemon -V --ignore ./client --ignore ./nemsis --ignore ./tmp ./bin/www",
+    "start": "nodemon -V --ignore ./client --ignore ./nemsis --ignore ./public --ignore ./tmp ./bin/www",
     "test": "mocha --recursive test/unit test/integration",
     "ci": "prettier --check . && npm run lint && npm run test",
     "lint": "eslint .",
@@ -90,6 +90,9 @@
       }
     ]
   },
+  "mocha": {
+    "timeout": 120000
+  },
   "prettier": {
     "jsxBracketSameLine": true,
     "printWidth": 140,
@@ -121,7 +124,7 @@
     "ajv": "^6.12.0",
     "ajv-cli": "^3.1.0",
     "angular-sortablejs": "^2.7.0",
-    "aws-sdk": "^2.463.0",
+    "aws-sdk": "^2.773.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "~4.4",
