--- a/example.env
+++ b/example.env
@@ -12,6 +12,9 @@ GOOGLE_MAPS_API_KEY=
 GOOGLE_MAPS_SERVER_API_KEY=
 MARKETING_EMAIL=
 MARKETING_ENABLED=false
+NEMSIS_VALIDATOR_USERNAME=
+NEMSIS_VALIDATOR_PASSWORD=
+NEMSIS_VALIDATOR_ORGANIZATION=
 SESSION_SECRET=randomstring
 SMTP_FROM_EMAIL_ADDRESS=
 SMTP_HOST=mailcatcher
