--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:dev": "webpack-dev-server",
     "build:prod": "npm run build:clean && npm run webpack-prod && npm run build:clean",
     "build:clean": "del-cli 'client/**/*.js' '!client/**/*.font.js' 'client/**/*.js.map' 'client/**/*.ngsummary.json' 'client/**/*.metadata.json' 'client/**/**/*.ngfactory.ts' 'client/**/*.ngstyle.ts' 'client/**/*.shim.ts'",
-    "start": "nodemon -V --ignore ./client --ignore ./nemsis --ignore ./public --ignore ./tmp ./bin/www",
-    "test": "mocha --recursive test/unit test/integration",
+    "start": "nodemon -V --ignore ./client --ignore ./nemsis --ignore ./public  --ignore ./test --ignore ./tmp ./bin/www",
+    "test": "mocha --unhandled-rejections=strict --recursive test/unit test/integration",
     "ci": "prettier --check . && npm run lint && npm run test",
     "lint": "eslint .",
     "pp": "prettier --write ."
@@ -177,6 +177,7 @@
     "sequelize-paginate": "^1.1.6",
     "shelljs": "^0.8.4",
     "smoothscroll-polyfill": "^0.4.4",
+    "soap": "^0.33.0",
     "sortablejs": "^1.9.0",
     "supertest": "^4.0.2",
     "supertest-session": "^4.0.0",
@@ -237,6 +238,7 @@
     "webpack-bundle-tracker": "^0.4.2-beta",
     "webpack-cli": "~3.2",
     "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "~4.2"
+    "webpack-merge": "~4.2",
+    "why-is-node-running": "^2.2.0"
   }
 }
