[#90] Integrate Rollbar error logging

--- a/example.env
+++ b/example.env
@@ -15,6 +15,7 @@ MARKETING_ENABLED=false
 NEMSIS_VALIDATOR_USERNAME=
 NEMSIS_VALIDATOR_PASSWORD=
 NEMSIS_VALIDATOR_ORGANIZATION=
+ROLLBAR_POST_SERVER_ITEM_ACCESS_TOKEN=
 SESSION_SECRET=randomstring
 SMTP_FROM_EMAIL_ADDRESS=
 SMTP_HOST=mailcatcher
