--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "popper.js": "~1.16",
     "qrcode": "^1.4.2",
     "readline": "^1.3.0",
+    "rollbar": "^2.21.1",
     "rxjs": "~6.5",
     "seedrandom": "^3.0.5",
     "sequelize": "^6.3.4",
