--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.0",
     "node-stream-zip": "^1.9.1",
     "nodemon": "^1.19.0",
