--- a/example.env
+++ b/example.env
@@ -10,6 +10,10 @@ EXPRESS_LOG_LEVEL=dev
 GOOGLE_ANALYTICS_MEASUREMENT_ID=
 GOOGLE_MAPS_API_KEY=
 GOOGLE_MAPS_SERVER_API_KEY=
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET_KEY=
+MARKETING_BLOG=
+MARKETING_BLOG_FEED=
 MARKETING_EMAIL=
 MARKETING_ENABLED=false
 NEMSIS_VALIDATOR_USERNAME=
