[#104] Update local development to use localhost instead of lvh.me

--- a/example.env
+++ b/example.env
@@ -1,12 +1,13 @@
-APP_NAME=NaT
+APP_NAME=Peak Response
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
 AWS_S3_BUCKET_REGION=
-BASE_HOST=lvh.me
-BASE_URL=http://lvh.me:3000
+BASE_HOST=localhost
+BASE_URL=http://localhost:3000
 COMPOSE_PROJECT_NAME=peak
 EXPRESS_LOG_LEVEL=dev
+EXPRESS_SUBDOMAIN_OFFSET=1
 GOOGLE_ANALYTICS_MEASUREMENT_ID=
 GOOGLE_MAPS_API_KEY=
 GOOGLE_MAPS_SERVER_API_KEY=
