Simplify compose yml files, make sure deploy works on its own

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -10,6 +10,9 @@ services:
     command: bash -l -c "npm start"
     env_file:
       - .env
+    environment:
+      - PORT=3000
+      - DATABASE_URL=postgres://postgres@db/app
     ports:
       - ${HOST_PORT:-3000}:3000
     depends_on:
