--- a/example.env
+++ b/example.env
@@ -3,8 +3,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
 AWS_S3_BUCKET_REGION=
-BASE_HOST=localhost
-BASE_URL=http://localhost:3000
+BASE_HOST=peakresponse.localhost
+BASE_URL=http://peakresponse.localhost:3000
 EXPRESS_LOG_LEVEL=dev
 EXPRESS_SUBDOMAIN_OFFSET=1
 GOOGLE_ANALYTICS_MEASUREMENT_ID=
