--- a/example.env
+++ b/example.env
@@ -3,11 +3,10 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
 AWS_S3_BUCKET_REGION=
-BASE_HOST=localhost
-BASE_URL=http://localhost:3000
-COMPOSE_PROJECT_NAME=peak
+BASE_HOST=peakresponse.localhost
+BASE_URL=http://peakresponse.localhost:3000
 EXPRESS_LOG_LEVEL=dev
-EXPRESS_SUBDOMAIN_OFFSET=1
+EXPRESS_SUBDOMAIN_OFFSET=2
 GOOGLE_ANALYTICS_MEASUREMENT_ID=
 GOOGLE_MAPS_API_KEY=
 GOOGLE_MAPS_SERVER_API_KEY=
