--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "inflection": "^1.12.0",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
+    "json-diff": "^0.5.4",
     "jsondiffpatch": "^0.4.1",
     "line-by-line": "^0.1.6",
     "lodash": "^4.17.15",
