--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
   "angularCompilerOptions": {
     "enableIvy": false
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "angular"]
 }
