Add bootstrap, start building up component library again

--- a/angular/angular.json
+++ b/angular/angular.json
@@ -29,13 +29,8 @@
             "polyfills": "projects/design/src/polyfills.ts",
             "tsConfig": "projects/design/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "projects/design/src/favicon.ico",
-              "projects/design/src/assets"
-            ],
-            "styles": [
-              "projects/design/src/styles.scss"
-            ],
+            "assets": ["projects/design/src/favicon.ico", "projects/design/src/assets"],
+            "styles": ["projects/design/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -97,13 +92,8 @@
             "tsConfig": "projects/design/tsconfig.spec.json",
             "karmaConfig": "projects/design/karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "projects/design/src/favicon.ico",
-              "projects/design/src/assets"
-            ],
-            "styles": [
-              "projects/design/src/styles.scss"
-            ],
+            "assets": ["projects/design/src/favicon.ico", "projects/design/src/assets"],
+            "styles": ["projects/design/src/styles.scss"],
             "scripts": []
           }
         }
