Search field, agency onboarding screen

--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -4,7 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0"
+    "@angular/forms": "^12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
