--- a/angular/package.json
+++ b/angular/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
+    "activestorage": "^5.2.6",
     "bootstrap": "^5.1.1",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,7 +32,9 @@
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/activestorage": "^5.2.4",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.175",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
