--- a/angular/package.json
+++ b/angular/package.json
@@ -22,9 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
     "activestorage": "^5.2.6",
     "bootstrap": "^5.1.1",
+    "inflection": "^1.13.1",
     "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
