--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -5,7 +5,9 @@
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0",
     "@angular/forms": "^12.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2"
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
+    "inflection": "^1.13.1",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
