--- a/angular/package.json
+++ b/angular/package.json
@@ -35,9 +35,11 @@
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
     "@types/activestorage": "^5.2.4",
+    "@types/inflection": "^1.13.0",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.175",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
