--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -128,6 +128,28 @@ server {
         proxy_pass http://server:4500;
     }
 
+    location /angular/app {
+        proxy_read_timeout      300;
+        proxy_connect_timeout   300;
+        proxy_redirect          off;
+
+        proxy_set_header    Host                 $host;
+        proxy_set_header    X-Real-IP            $remote_addr;
+        proxy_set_header    X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto    $scheme;
+        proxy_set_header    X-Forwarded-Protocol $scheme;
+        proxy_set_header    X-Forwarded-Ssl      off;
+        proxy_set_header    X-Url-Scheme         $scheme;
+        proxy_set_header    X-Frame-Options      SAMEORIGIN;
+
+        # Forward WebSocket.
+        proxy_http_version  1.1;
+        proxy_set_header    Upgrade              $http_upgrade;
+        proxy_set_header    Connection           $connection_upgrade;
+
+        proxy_pass http://server:4600;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
@@ -160,7 +182,6 @@ server {
     #    deny  all;
     #}
 }
-
 
 server {
     server_name  .${BASE_HOST};
