--- a/angular/package.json
+++ b/angular/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.1.1",
     "inflection": "^1.13.1",
     "lodash": "^4.17.21",
+    "luxon": "^2.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
@@ -38,6 +39,7 @@
     "@types/inflection": "^1.13.0",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.175",
+    "@types/luxon": "^2.0.5",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
