Return temporary mobile app AWS credentials

--- a/example.env
+++ b/example.env
@@ -3,6 +3,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
 AWS_S3_BUCKET_REGION=
+AWS_MOBILEAPP_ACCESS_KEY_ID=
+AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 BASE_HOST=peakresponse.localhost
 BASE_URL=http://peakresponse.localhost:3000
 EXPRESS_LOG_LEVEL=dev
