--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "pg": "^8.2.1",
     "popper.js": "~1.16",
     "qrcode": "^1.4.2",
+    "randomstring": "^1.2.2",
     "readline": "^1.3.0",
     "rollbar": "^2.21.1",
     "rxjs": "~6.5",
