--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@ng-web-apis/common": "^1.7.0",
     "@ng-web-apis/geolocation": "^1.0.3",
     "@ngtools/webpack": "github:francisli/ngtools-webpack-builds#9.1.x-multiple-entry-modules",
+    "@node-oauth/oauth2-server": "^4.1.1",
     "@zxing/ngx-scanner": "^3.0.1",
     "activestorage": "^5.2.3",
     "agm-overlays": "^2.0.0",
