--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
+          docker_layer_caching: true
           version: 20.10.2
       - run: echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_LOGIN --password-stdin
       - run: docker-compose -f docker-compose.test.yml up -d db
+      - run: docker-compose -f docker-compose.test.yml build server
       - run: docker-compose -f docker-compose.test.yml run server npx sequelize db:create --env=test
       - run: docker-compose -f docker-compose.test.yml run server npx sequelize db:migrate --env=test
       - run: docker-compose -f docker-compose.test.yml run server npm run ci
