--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "version": "0.0.0",
+  "name": "peak-server",
+  "version": "2.0.0-beta1",
   "private": true,
   "scripts": {
     "webpack-dev": "cross-env NODE_ENV=development webpack --mode development",
