--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "jsondiffpatch": "^0.4.1",
     "line-by-line": "^0.1.6",
     "lodash": "^4.17.15",
+    "luxon": "^2.3.1",
     "mime-types": "^2.1.24",
     "mkdirp": "^0.5.1",
     "mocha": "^7.1.1",
