--- a/angular/package.json
+++ b/angular/package.json
@@ -25,6 +25,7 @@
     "inflection": "^1.13.1",
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
+    "mini-css-extract-plugin": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
