--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peak-server",
-  "version": "2.0.0-alpha3",
+  "version": "2.0.0-alpha.4",
   "private": true,
   "scripts": {
     "webpack-dev": "cross-env NODE_ENV=development webpack --mode development",
