[Closes #144] Updated websocket endpoints, new MCI support

--- a/package.json
+++ b/package.json
@@ -205,7 +205,7 @@
     "@types/core-js": "~2.5",
     "@types/inflection": "^1.5.28",
     "@types/lodash": "^4.14.132",
-    "@types/node": "~10.12",
+    "@types/node": "^14.18.16",
     "@types/numeral": "0.0.26",
     "@types/uuid": "^8.0.0",
     "angular-router-loader": "~0.8",
@@ -239,6 +239,7 @@
     "prettier": "^2.1.2",
     "sass-loader": "~7.1",
     "style-loader": "~0.23",
+    "superwstest": "^2.0.2",
     "to-string-loader": "~1.1",
     "typescript": "~3.8",
     "uglifyjs-webpack-plugin": "~2.0",
