[Closes #170] New Form/Signature models, API endpoint, Report integration

--- a/angular/package.json
+++ b/angular/package.json
@@ -26,7 +26,9 @@
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
     "mini-css-extract-plugin": "^2.4.2",
+    "ngx-sortablejs": "^11.1.0",
     "rxjs": "~6.6.0",
+    "sortablejs": "^1.15.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
@@ -42,6 +44,7 @@
     "@types/lodash": "^4.14.175",
     "@types/luxon": "^2.0.5",
     "@types/node": "^12.11.1",
+    "@types/sortablejs": "^1.15.0",
     "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
     "karma": "^6.3.17",
