--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -8,6 +8,8 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
     "activestorage": "^5.2.6",
     "inflection": "^1.13.1",
+    "ngx-sortablejs": "^11.1.0",
+    "sortablejs": "^1.15.0",
     "uuid": "^8.3.2"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@types/activestorage": "^5.2.4",
     "@types/inflection": "^1.13.0",
+    "@types/sortablejs": "^1.15.0",
     "@types/uuid": "^8.3.1"
   }
 }
