--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -15,6 +15,7 @@ services:
       - DATABASE_URL=postgres://postgres@db/app
       - AWS_MOBILEAPP_ACCESS_KEY_ID
       - AWS_MOBILEAPP_SECRET_ACCESS_KEY
+      - GOOGLE_MAPS_SERVER_API_KEY
       - NEMSIS_VALIDATOR_USERNAME
       - NEMSIS_VALIDATOR_PASSWORD
       - NEMSIS_VALIDATOR_ORGANIZATION
