--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "node-sass": "^4.14.1",
     "nodemailer-mock": "^1.5.1",
     "prettier": "^2.1.2",
+    "semver": "^7.3.8",
     "superwstest": "^2.0.2"
   }
 }
