--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "mocha --unhandled-rejections=strict --recursive test/unit test/integration",
     "ci": "prettier --check . && npm run lint && npm run test",
     "lint": "eslint .",
-    "lint:changed": "eslint $(git diff --name-only; git ls-files -o --exclude-standard)",
+    "lint:changed": "eslint $(git diff --name-only -- *.js; git ls-files -o --exclude-standard -- *.js)",
     "pp": "prettier --write .",
-    "pp:changed": "prettier --write $(git diff --name-only; git ls-files -o --exclude-standard)"
+    "pp:changed": "prettier --write $(git diff --name-only -- '*.js' '*.ts' '*.css' '*.scss' '*.json'; git ls-files -o --exclude-standard -- '*.js' '*.ts' '*.css' '*.scss' '*.json')"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -161,6 +161,7 @@
     "validate-with-xmllint": "^1.2.0",
     "ws": "^7.5.0",
     "xlsx": "^0.18.4",
+    "xml-formatter": "^3.2.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
