--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
     "node-cache": "^5.1.2",
+    "node-expat": "^2.4.0",
     "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.9.1",
     "nodemon": "^2.0.15",
