--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
     "mini-css-extract-plugin": "^2.4.2",
+    "ngx-dropzone": "^3.1.0",
     "ngx-sortablejs": "^11.1.0",
     "rxjs": "~6.6.0",
     "sortablejs": "^1.15.0",
