--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -8,6 +8,7 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
     "activestorage": "^5.2.6",
     "inflection": "^1.13.1",
+    "ngx-dropzone": "^3.1.0",
     "ngx-sortablejs": "^11.1.0",
     "sortablejs": "^1.15.0",
     "uuid": "^8.3.2"
