--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "inflection": "^1.12.0",
     "jquery": "^3.6.0",
     "jsondiffpatch": "^0.4.1",
+    "jsonpath-plus": "^7.2.0",
     "line-by-line": "^0.1.6",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
