--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "ajv": "^6.12.6",
     "ajv-cli": "^3.1.0",
     "aws-sdk": "^2.1095.0",
+    "basic-ftp": "^5.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.1",
