--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,14 @@ services:
     ports:
       - 1080:1080
       - 1025:1025
+  minio:
+    image: minio/minio:RELEASE.2023-12-09T18-17-51Z
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    command: 'server /data --console-address ":9001"'
+    volumes:
+      - ./data/minio:/data
   db:
     image: postgis/postgis:11-3.0-alpine
     environment:
@@ -22,11 +30,18 @@ services:
     environment:
       - PORT=3000
       - DATABASE_URL=postgres://postgres@db/app
+      - AWS_S3_ACCESS_KEY_ID=minioadmin
+      - AWS_S3_SECRET_ACCESS_KEY=minioadmin
+      - AWS_S3_BUCKET=app
+      - AWS_S3_ENDPOINT=http://minio:9000
+      - AWS_S3_REGION=us-east-1
+      - AWS_S3_SIGNER_ENDPOINT=http://localhost:9000
     ports:
       - 3001:3001
       - 4200:4200
     depends_on:
       - db
+      - minio
   nginx:
     build: ./nginx
     image: peakresponse/peak-nginx
