--- a/example.env
+++ b/example.env
@@ -1,9 +1,11 @@
 API_LEVEL_MIN=
 APP_NAME=Peak Response
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
-AWS_S3_BUCKET_REGION=
+AWS_S3_ENDPOINT=
+AWS_S3_REGION=
+AWS_S3_SIGNER_ENDPOINT=
 AWS_MOBILEAPP_ACCESS_KEY_ID=
 AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 BASE_HOST=peakresponse.localhost
