--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.470.0",
+    "@aws-sdk/cloudfront-signer": "^3.468.0",
+    "@aws-sdk/s3-request-presigner": "^3.470.0",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@googlemaps/google-maps-services-js": "^3.3.26",
     "@node-oauth/oauth2-server": "^4.3.0",
