--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -16,7 +16,7 @@ services:
       - minio
     entrypoint: >
       /bin/sh -c "
-      mc config host add myminio http://minio:9000 minioadmin minioadmin;
+      mc alias set myminio http://minio:9000 minioadmin minioadmin
       mc mb --ignore-existing myminio/app
       exit 0;
       "
