--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,7 +14,7 @@ services:
     image: minio/mc
     depends_on:
       - minio
-    entrypoint: >
+    command: >
       /bin/sh -c "
       mc alias set myminio http://minio:9000 minioadmin minioadmin
       mc mb --ignore-existing myminio/app
