--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -20,6 +20,7 @@ services:
       mc mb --ignore-existing myminio/app
       exit 0;
       "
+    entrypoint: /bin/sh
   server:
     build: .
     image: peakresponse/peak-server
