--- a/example.env
+++ b/example.env
@@ -5,7 +5,7 @@ AWS_S3_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
 AWS_S3_ENDPOINT=
 AWS_S3_REGION=
-AWS_S3_SIGNER_ENDPOINT=
+AWS_S3_SIGNER_ENDPOINT=http://localhost:9000
 AWS_MOBILEAPP_ACCESS_KEY_ID=
 AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 BASE_HOST=peakresponse.localhost
