--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -252,3 +252,73 @@ server {
     #    deny  all;
     #}
 }
+
+server {
+    server_name  .${BASE_HOST};
+
+    # listen       ${PORT};
+    # listen  [::]:${PORT};
+
+    listen       9000 ssl;
+    listen  [::]:9000 ssl;
+    ssl_certificate /etc/letsencrypt/live/${BASE_HOST}-0001/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/${BASE_HOST}-0001/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+    #access_log  /var/log/nginx/host.access.log  main;
+
+    location / {
+        proxy_read_timeout      300;
+        proxy_connect_timeout   300;
+        proxy_redirect          off;
+
+        proxy_set_header    Host                 $http_host;
+        proxy_set_header    X-Real-IP            $remote_addr;
+        proxy_set_header    X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto    $scheme;
+        proxy_set_header    X-Forwarded-Protocol $scheme;
+        proxy_set_header    X-Forwarded-Ssl      off;
+        proxy_set_header    X-Url-Scheme         $scheme;
+        proxy_set_header    X-Frame-Options      SAMEORIGIN;
+
+        # Forward WebSocket.
+        proxy_http_version  1.1;
+        proxy_set_header    Upgrade              $http_upgrade;
+        proxy_set_header    Connection           $connection_upgrade;
+
+        proxy_pass http://minio:9000;
+    }
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    #location ~ \.php$ {
+    #    root           html;
+    #    fastcgi_pass   127.0.0.1:9000;
+    #    fastcgi_index  index.php;
+    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #    include        fastcgi_params;
+    #}
+
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
+}
