--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,13 +14,12 @@ services:
     image: minio/mc
     depends_on:
       - minio
-    command: >
-      -c "
-      mc alias set myminio http://minio:9000 minioadmin minioadmin
-      mc mb myminio/app
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc mb --ignore-existing myminio/app;
       exit 0;
       "
-    entrypoint: /bin/sh
   server:
     build: .
     image: peakresponse/peak-server
