[Closes #267] First pass, Report NEMSIS xml export (#270)
* Clean out deprecated validation implementation in Agency

* Add Version association to Report and related classes

* Revert "Add Version association to Report and related classes"

This reverts commit 93fab3680251d9be83e64b21fa052f2b4fd11c37.

* Add Version association to Report only

* Clean out now un-used/deprecated Patient version attribute

* Clean out old deprecated NEMSIS validation implementation

* Address test failures

* Start report XML generation

* Start generation of XML from associated Report objects

* Handle grouped records in Report generation

* Add nil placeholders for other required parts of EMSDataSet

* Starting EMS Data Set validation

* Set placeholder values in Patient

* Report complete NEMSIS validation, passing with warnings

* Fix linter warning

* Switch Vehicles API endpoint for Assignmnet flow

* Make create versions migration script idempotent

* Fix User/Assignment handling

* Fix Reports list layout/styling

* Setting up Export interface

* Report preview endpoint

* Fallback to agency version if no report version

* First pass, web Export

* Clean up/refactor test file upload handling, add sample mp4 file

* Setting up for File serialization in XML generation

* Starting File/Signature xml handling

* Making getData async

* Refactor AWS STS usage

* Start AWS s3 usage refactor

* S3 refactor continued

* S3 refactor

* Restore special case isInGroup handing for error handling

* Setting up Minio for local development and testing

* Fix formatting

* Tweak test compose config

* Try command instead of entrypoint

* Try again

* One more try

* Again

* More minio changes, proxy through nginx

* Try try again

* Fix tests

* Setting up base64 file inclusion in XML export

* Add file insertion utility

* File insertion handling on export

* Fix failing test

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-alpha.33",
   "private": true,
   "scripts": {
-    "start": "nodemon -V --ignore ./angular --ignore ./nemsis --ignore ./public  --ignore ./test --ignore ./tmp ./bin/www",
+    "start": "nodemon -V --ignore ./angular --ignore ./data --ignore ./nemsis --ignore ./public  --ignore ./test --ignore ./tmp ./bin/www",
     "test": "mocha --unhandled-rejections=strict --recursive test/unit test/integration",
     "ci": "prettier --check . && npm run lint && npm run test",
     "lint": "eslint .",
@@ -96,6 +96,9 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.470.0",
+    "@aws-sdk/cloudfront-signer": "^3.468.0",
+    "@aws-sdk/s3-request-presigner": "^3.470.0",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@googlemaps/google-maps-services-js": "^3.3.26",
     "@node-oauth/oauth2-server": "^4.3.0",
