--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,6 +4,22 @@ services:
     image: postgis/postgis:11-3.0-alpine
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
+  minio:
+    image: minio/minio:RELEASE.2023-12-09T18-17-51Z
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    command: 'server /data --console-address ":9001"'
+  minio_setup:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc mb --ignore-existing myminio/app;
+      exit 0;
+      "
   server:
     build: .
     image: peakresponse/peak-server
@@ -15,6 +31,12 @@ services:
       - DATABASE_URL=postgres://postgres@db/app
       - AWS_MOBILEAPP_ACCESS_KEY_ID
       - AWS_MOBILEAPP_SECRET_ACCESS_KEY
+      - AWS_S3_ACCESS_KEY_ID=minioadmin
+      - AWS_S3_SECRET_ACCESS_KEY=minioadmin
+      - AWS_S3_BUCKET=app
+      - AWS_S3_ENDPOINT=http://minio:9000
+      - AWS_S3_REGION=us-east-1
+      - AWS_S3_SIGNER_ENDPOINT=http://localhost:9000
       - GOOGLE_MAPS_SERVER_API_KEY
       - NEMSIS_VALIDATOR_USERNAME
       - NEMSIS_VALIDATOR_PASSWORD
@@ -22,3 +44,5 @@ services:
       - PORT=3000
     depends_on:
       - db
+      - minio
+      - minio_setup
