[Closes #271] Update S3 configuration to support Production setup

--- a/example.env
+++ b/example.env
@@ -1,13 +1,13 @@
 API_LEVEL_MIN=
 APP_NAME=Peak Response
+AWS_MOBILEAPP_ACCESS_KEY_ID=
+AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 AWS_S3_ACCESS_KEY_ID=
 AWS_S3_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
+AWS_S3_BUCKET_REGION=
 AWS_S3_ENDPOINT=
-AWS_S3_REGION=
 AWS_S3_SIGNER_ENDPOINT=http://localhost:9000
-AWS_MOBILEAPP_ACCESS_KEY_ID=
-AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 BASE_HOST=peakresponse.localhost
 BASE_URL=http://peakresponse.localhost:3000
 EXPRESS_LOG_LEVEL=dev
