--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -35,7 +35,7 @@ services:
       - AWS_S3_SECRET_ACCESS_KEY=minioadmin
       - AWS_S3_BUCKET=app
       - AWS_S3_ENDPOINT=http://minio:9000
-      - AWS_S3_REGION=us-east-1
+      - AWS_S3_BUCKET_REGION=us-east-1
       - AWS_S3_SIGNER_ENDPOINT=http://localhost:9000
       - GOOGLE_MAPS_SERVER_API_KEY
       - NEMSIS_VALIDATOR_USERNAME
