--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - AWS_S3_SECRET_ACCESS_KEY=minioadmin
       - AWS_S3_BUCKET=app
       - AWS_S3_ENDPOINT=http://minio:9000
-      - AWS_S3_REGION=us-east-1
+      - AWS_S3_BUCKET_REGION=us-east-1
     ports:
       - 3001:3001
       - 4200:4200
