Fix Passport auth

--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -15,17 +15,11 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "paths": {
-      "shared": [
-        "dist/shared/shared",
-        "dist/shared"
-      ]
+      "shared": ["dist/shared/shared", "dist/shared"]
     },
     "target": "ES2022",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "lib": ["es2018", "dom"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
