--- a/example.env
+++ b/example.env
@@ -2,6 +2,7 @@ API_LEVEL_MIN=
 APP_NAME=Peak Response
 AWS_MOBILEAPP_ACCESS_KEY_ID=
 AWS_MOBILEAPP_SECRET_ACCESS_KEY=
+AWS_MOBILEAPP_REGION=
 AWS_S3_ACCESS_KEY_ID=
 AWS_S3_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
