Make password a virtual attribute, encrypt/decrypt in setter/getter

--- a/example.env
+++ b/example.env
@@ -23,6 +23,7 @@ MARKETING_BLOG=
 MARKETING_BLOG_FEED=
 MARKETING_EMAIL=
 MARKETING_ENABLED=false
+MODEL_EXPORT_AES_KEY=
 NEMSIS_VALIDATOR_USERNAME=
 NEMSIS_VALIDATOR_PASSWORD=
 NEMSIS_VALIDATOR_ORGANIZATION=
