[Closes #324] Allows specific asset paths to be accessed unauthorized

--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
 API_LEVEL_MIN=
 APP_NAME=Peak Response
+ASSET_PATH_PREFIX=
+ASSET_UNAUTHORIZED_PATHS=guide-items
 AWS_MOBILEAPP_ACCESS_KEY_ID=
 AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 AWS_MOBILEAPP_REGION=
