Update base image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,14 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: cimg/base:2020.01
+      - image: cimg/base:2024.05
     steps:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
       - run: echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_LOGIN --password-stdin
-      - run: docker-compose -f docker-compose.test.yml build server
-      - run: docker-compose -f docker-compose.test.yml run server bash -l -c "bin/pg_wait && npx sequelize db:create --env=test && npx sequelize db:migrate --env=test && npm run ci"
+      - run: docker compose -f docker-compose.test.yml build server
+      - run: docker compose -f docker-compose.test.yml run server bash -l -c "bin/pg_wait && npx sequelize db:create --env=test && npx sequelize db:migrate --env=test && npm run ci"
       - run: bin/release
     resource_class: large
 
