Working CustomResults rendering

--- a/angular/package.json
+++ b/angular/package.json
@@ -25,6 +25,7 @@
     "activestorage": "^5.2.8-1",
     "bootstrap": "~5.2.3",
     "inflection": "^3.0.0",
+    "jsonpath-plus": "^9.0.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
     "ngx-dropzone": "^3.1.0",
@@ -42,6 +43,7 @@
     "@types/activestorage": "^5.2.7",
     "@types/inflection": "^1.13.2",
     "@types/jasmine": "~3.8.0",
+    "@types/jsonpath-plus": "^5.0.5",
     "@types/lodash-es": "^4.17.12",
     "@types/luxon": "^3.3.7",
     "@types/node": "^18.11.9",
