[Closes #405] Set up ngrok config for local development without ssl certs

--- a/example.env
+++ b/example.env
@@ -10,7 +10,7 @@ AWS_S3_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=
 AWS_S3_BUCKET_REGION=
 AWS_S3_ENDPOINT=
-AWS_S3_SIGNER_ENDPOINT=http://localhost:9000
+AWS_S3_SIGNER_ENDPOINT=http://minio:9000
 BASE_HOST=peakresponse.localhost
 BASE_URL=http://peakresponse.localhost:3000
 EXPRESS_LOG_LEVEL=dev
